# GBox

./: .gitignore  .gitmodules  LICENSE  README.md  premake5.lua
GBox/: CMakeLists.txt
GBox/include/: GBox.h  gboxpch.h
GBox/include/GBox/Core/: Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  TimeStep.h  Window.h
GBox/include/GBox/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
GBox/include/GBox/ImGui/: ImGuiLayer.h
GBox/include/GBox/Renderer/: Buffer.h  GraphicsContext.h  OrthographicCamera.h  Renderer.h  RendererAPI.h  RendererCommand.h  Shader.h  Texture.h  VertexArray.h
GBox/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
GBox/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
GBox/src/: gboxpch.cpp
GBox/src/GBox/Core/: Application.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
GBox/src/GBox/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
GBox/src/GBox/Renderer/: Buffer.cpp  OrthograpgicCamera.cpp  Renderer.cpp  RendererAPI.cpp  RendererCommand.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
GBox/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
GBox/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp
note/: 笔记.md
scripts/: GenerateProjects.bat
